# Altair8800_Pico

./: CMakeLists.txt  build.sh  main.c  opcode-list.py  run.sh
include/: altair_cpu.h  instructions.h  instructions_impl.h
src/: altair_cpu.c  altair_cpu.h  instructions.c  instructions.h  instructions_impl.c  instructions_impl.h  main.c  opcode-list.py
